force-app/main/default/objects/Loan_Event__c/Loan_Event__c.object-meta.xml
<CustomObject>
    <description>This object tracks all key loan events that may occur on an investment record (creation, rescheduling, write-off, pay off etc.)</description>
    <label>Loan Event</label>
    <nameField>
        <label>Loan Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>