force-app/main/default/objects/Loan_Event__c/fields/Balloon_Repayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Balloon_Repayment_Period__c</fullName>
    <label>Balloon Repayment Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>