force-app/main/default/objects/Loan_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The date the Loan Event occured</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>