force-app/main/default/objects/Loan_Event__c/fields/Interest_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Interest_Written_Off__c</fullName>
    <label>Interest Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>