force-app/main/default/objects/Loan_Event__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the loan (investment) that this loan event belongs to</description>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Loan Events</relationshipLabel>
    <relationshipName>Loan_Events</relationshipName>
    <type>Lookup</type>
</CustomField>