force-app/main/default/objects/Loan_Event__c/fields/Loan_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Event_Type__c</fullName>
    <label>Loan Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Creation</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Interest Rate Change</fullName>
            </value>
            <value>
                <fullName>Interest Rollup Recalculation</fullName>
            </value>
            <value>
                <fullName>Closed (Written Off)</fullName>
            </value>
            <value>
                <fullName>Closed (Early Repayment)</fullName>
            </value>
            <value>
                <fullName>Closed (All Obligations met)</fullName>
            </value>
            <value>
                <fullName>Bullet Repayment</fullName>
            </value>
            <value>
                <fullName>Automatic Schedule Migration for Migrated Loan</fullName>
            </value>
            <value>
                <fullName>Fee Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>