force-app/main/default/objects/Loan_Event__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Product</label>
    <referenceTo>Loan_Product__c</referenceTo>
    <relationshipLabel>Loan Events</relationshipLabel>
    <relationshipName>Loan_Events</relationshipName>
    <type>Lookup</type>
</CustomField>