force-app/main/default/objects/Loan_Event__c/fields/Number_of_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instalments__c</fullName>
    <label>Number of Instalments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>