force-app/main/default/objects/Loan_Event__c/fields/Old_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Amount__c</fullName>
    <description>The loan amount that was before the refinancing of the loan</description>
    <inlineHelpText>The loan amount that was before the refinancing of the loan</inlineHelpText>
    <label>Old Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>