force-app/main/default/objects/Loan_Event__c/fields/Repayment_Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency_Unit__c</fullName>
    <label>Repayment Frequency Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>