force-app/main/default/objects/Loan_Event__c/fields/Reschedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Type__c</fullName>
    <label>Reschedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Payment Date</fullName>
            </value>
            <value>
                <fullName>Introduce Grace Period</fullName>
            </value>
            <value>
                <fullName>Change Periodic Repayment Amount</fullName>
            </value>
            <value>
                <fullName>Manual Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>