force-app/main/default/objects/Loan_Event__c/fields/Top_up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Top_up_Amount__c</fullName>
    <description>The sum of all new payment transactions that were added during the refinancing of the loan</description>
    <inlineHelpText>The sum of all new payment transactions that were added during the refinancing of the loan</inlineHelpText>
    <label>Top-up Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>