force-app/main/default/objects/Loan_Event__c/fields/Variable_Interest_Spread__c.field-meta.xml
<CustomField>
    <fullName>Variable_Interest_Spread__c</fullName>
    <label>Variable Interest Spread</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>